# MLOps_OKI_2026

./: .coverage  README.md  evaluate.dockerfile  pyproject.toml  tasks.py  train.dockerfile
.github/: dependabot.yml
.github/workflows/: tests.yaml
models/: model.pth
src/adv_cookie_recipy/: data.py  evaluate.py  model.py
src/adv_cookie_recipy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py  test_model.py  test_training.py
